# ajson

./: .gitignore  CMakeLists.txt  README.md  ajson.pc.in  ajson.py
doc/: CMakeLists.txt  Doxyfile.in  ajson.dox  callback_parser.dox  parser.dox  writer.dox
examples/: CMakeLists.txt  prettyprint.c  tokens.c
perf/: CMakeLists.txt  perftest.c
src/: CMakeLists.txt  ajson.c  ajson.h  callback_parser.c  config.h.in  parser.c  snprintf.h  token_parser.c  writer.c
test/: CMakeLists.txt  run_test.sh  tokens.c
test/data/negative/: 1.x.tokens  array_comma_at_end.tokens  array_comma_in_empty.tokens  array_double_close.tokens  array_double_comma.tokens  array_missing_close.tokens  array_missing_comma.tokens  array_unbalanced.tokens  array_with_colon.json  array_with_colon.tokens  arrayx.tokens  bracket_mixup.json  bracket_mixup.tokens  lone_array_open.tokens  lone_dot.tokens  lone_fa.tokens  lone_object_open.tokens  multiple_values.json  multiple_values.tokens  number_missing_decimals_with_exponent.tokens  object_array_as_key.json  object_comma_at_end.tokens  object_double_colon.json  object_double_colon.tokens  object_double_comma.json  object_double_comma.tokens  object_false_as_key.json  object_missing_close.tokens  object_missing_colon.json  object_missing_comma.json  object_missing_comma.tokens  object_missing_open.json  object_missing_open.tokens  object_missing_value.tokens  object_multiple_keys.json  object_multiple_keys.tokens  object_multiple_values.json  object_multiple_values.tokens  object_null_as_key.json  object_number_as_key.tokens  (+20 more)
test/data/positive/: complex_compact.json  complex_compact.tokens  complex_formatted.json  deep_array.json  deep_array.tokens  deep_object.json  deep_object.tokens  dos.json  dos.tokens  empty_array.tokens  empty_object.tokens  empty_string.tokens  escapes.json  escapes.tokens  false.tokens  null.tokens  numbers.json  numbers.tokens  string_nullbyte.json  string_nullbyte.tokens  string_u0000.tokens  true.tokens  unicode.json  unicode.tokens  zero.tokens
